- fix card footer and card body overlapping

--- a/planner/static/planner/css/style.css
+++ b/planner/static/planner/css/style.css
@@ -288,19 +288,25 @@ html, body {
     margin-bottom: 20px;
 }
 
+.card-body {
+    flex: 1 1 auto;
+}
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     padding: 10px;
     height: 100%;
     margin-bottom: 20px;
-
+    display: flex;
+    flex: 1 0 1%;
+    flex-direction: column;
 }
 
+
 .card-footer {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  width: calc(100% - 50px);
+  /*position: absolute;*/
+  /*bottom: 0;*/
+  /*display: block;*/
+  /*margin-bottom: 10px;*/
+  /*margin-top: 20px;*/
+  /*width: calc(100% - 50px);*/
 }
